--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @import url(fonts.css);
 
-*{margin: 0;padding: 0; box-sizing: border-box;}
+*{margin: 0;padding: 0; box-sizing: border-box;scroll-behavior: smooth;}
 a{text-decoration: none;}
 li{list-style: none;}
 img{vertical-align: middle;}
@@ -856,6 +856,122 @@ nav{
 
 /* =====footer===== */
 
+.footer__inner-top-side{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1px solid #F2EFE6;
+
+    margin: 20px 0;
+    padding: 24px 0;
+}
+
+.footer__inner-top-side h3{
+    color: var(--cDarkGreen);
+
+    font-family: 'Recoleta';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+}
+
+.footer__inner-medias a i{
+    color: #198C36;
+    
+    padding: 0 6px;
+}
+
+.fa-facebook-f{
+    font-size: 25px;
+}
+.fa-facebook-f,
+.fa-twitter,
+.fa-invision,
+.fa-instagram{
+    font-size: 30px;
+}
+
+.footer__inner-bottom-side{
+    display: flex;
+    justify-content: space-between;
+
+    margin: 11px 0;
+    padding: 15px 0;
+}
+
+.footer__inner-bottom-side p{
+    color: var(--cDarkGreen);
+
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.footer__inner-menu{
+    display: flex;
+    align-items: center;
+
+    padding: 0 0 0 187px;
+}
+
+.footer__inner-menu a{
+    color: var(--cLightGreen);
+
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+
+    font-size: 14px;
+    line-height: 19px;
+    
+    margin: 0 5px;
+    padding: 0 2px;
+}
+
+.footer__inner-menu a::after{
+    content: '';
+
+    width: 0;
+    height: 2px;
+
+    background: transparent;
+
+    position: absolute;
+    bottom: 0;
+
+    border-radius: 23px 23px 0 0;
+
+    transition: .3s;
+
+    margin: 0 -2px;
+
+    transform: translateY(10px);
+}
+
+.footer__inner-menu a:hover::after{
+    width: 100%;
+
+    background: #F7BC28;
+}
+
 /* =====footer===== */
+
+/* =====arrow=====*/
+
+.arrow-alt{
+    color: #000000;
+
+    position: sticky;
+    top: 700px;
+    left: 1450px;
+
+    font-size: 35px;
+
+    z-index: 100;
+}
+
+/* =====arrow=====*/
 
 
